--- a/src/base/css/app.css
+++ b/src/base/css/app.css
@@ -1,11 +1,9 @@
-html{font-size: 62.5%;-webkit-font-smoothing: antialiased;-webkit-text-size-adjust:100%;-webkit-tap-highlight-color: rgba(0,0,0,0);}/*10px*/
-body{ /*-webkit-overflow-scrolling: touch;*/-webkit-appearance:none;/*取消默认外面*/ -webkit-user-select: none;/*禁止复制*/ -webkit-text-size-adjust: none;/*取消修改字大小*/  color:#333; margin:0 auto; min-width:320px; line-height:2rem;}
-a{ color:#333;}
-*, *:before, *:after {   -moz-box-sizing: border-box;   -webkit-box-sizing: border-box;box-sizing: border-box;}
-
 select{
 	max-width: 100%;
+	height: 40px
 }
+
+/*模态窗口*/
 .page-view{
 	display: none;
  	position: fixed;
@@ -20,11 +18,7 @@ select{
  	animation:fadein 100ms linear;
  	
 }
-@media screen and (max-width: 320px){
-	.page-view{
-		cursor: pointer;
-	}
-}
+
 .page-view .page-warp{
 	position: absolute;
 	left: 1rem;
@@ -121,8 +115,8 @@ select{
 	position: absolute;
 	top: 50%;
 	left: 0;
-	margin: 0px;
-	transform: translateY(-51%);
+	margin: -2px 0 0 0;
+	transform: translateY(-50%);
 }
 .item-middle{
 	position: absolute;
@@ -140,18 +134,11 @@ select{
 	background-color: rgba(0, 0, 0, 0);
 	cursor: pointer;
 }
-
-/* .font-face{ font-family:iconfont;}
-@media screen and (min-width:320px){
-	html{ font-size:62.5% !important;}
+@media screen and (max-width: 320px){
+	.page-view{
+		cursor: pointer;
+	}
 }
-@media screen and (min-width:480px){
-	html{ font-size:75% !important;}
-}
-@media screen and (min-width:640px){
-	html{ font-size:100% !important;}
-}
- */
 @keyframes fadein{
 	0%{
 		opacity: 0;
