--- a/src/base/css/app.css
+++ b/src/base/css/app.css
@@ -21,29 +21,29 @@ select{
 
 .page-view .page-warp{
 	position: absolute;
-	left: 1rem;
-	right: 1rem;
+	left: 10px;
+	right: 10px;
 	bottom: 0rem;
-	transform: translateY(-10rem);
-	-webkit-transform: translateY(-10rem);
+	transform: translateY(-100px);
+	-webkit-transform: translateY(-100px);
 	background: #fff;
-	padding: 1.5rem 1rem;
-	font-size: 1.2rem;
+	padding: 15px 10px;
+	font-size: 12px;
 	overflow: auto;
 	-webkit-overflow-scrolling: touch;
 	border-radius: 5px;
-	max-height: 60%;
+	max-height: 40%;
 }
 .page-view .close{
 	position: absolute;
 	left: 50%;
-	bottom: 3rem;
-	margin-left: -2rem;
+	bottom: 30px;
+	margin-left: -20px;
 	display: block;
-	width: 4rem;
-	height: 4rem;
+	width: 40px;
+	height: 40px;
 	background: #fff;
-	border-radius:2rem;
+	border-radius:20px;
 	transform: rotate(45deg);
 	-webkit-transform: rotate(45deg);
 	cursor: pointer;
@@ -67,26 +67,6 @@ select{
 	content: "";
 	height: 1px;
 	background: #ff0000;
-}
-.text-tip{
-	display: inline-block;
-	line-height: 1.3;
-	font-size: 1.4rem;
-	color:#868686;
-	padding-left: 2.4rem;
-}
-.text-tip::before {
-    width: 1.8rem;
-    height: 1.8rem;
-    content: " ";
-    display: inline-block;
-    float: left;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    margin-left: -2.4rem;
-    background: url('../images/reg-tip.png') no-repeat 0 0;
-    background-size: 100%;
-    margin-top: -1px;
 }
 
 /*select-modai*/
